Add net income + other